Bug 59894 - [CONDITIONAL FORMATTING] Setting up new conditional formatting leads to crash
Summary: [CONDITIONAL FORMATTING] Setting up new conditional formatting leads to crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.1.2 release
Hardware: All All
: medium critical
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-26 10:35 UTC by Florian Reisinger
Modified: 2013-02-02 09:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Test doc (421.98 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-01-26 10:35 UTC, Florian Reisinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Reisinger 2013-01-26 10:35:02 UTC
Created attachment 73674 [details]
Test doc

1) Open attachment
2) Open [ I did in Win x64 Version 4.0.0.2 (Build ID: 5991f37846fc3763493029c4958b57282c2597e) New user profil]
3) Switch to table "Artikel"
4) Select whole column C and apply a conditional formatting on that column
5) To apply a cond. formatting
- Format --> conditional formating
The menu items Color scale and data bar will lead to a crash...

Also tested with:
"Version 4.1.0.0.alpha0+ (Build ID: 2b17d6c14d226b1973c87ff161586c39899e403)
TinderBox: Win-x86@6, Branch:master, Time: 2013-01-26_00:10:54"

@Joel: Because this test document always leads to an crash I would like to ask the author to have his permission...

Till now only confirmed @Win 7 x64... Different OS would be nice
Comment 1 Not Assigned 2013-01-27 01:37:10 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6033eaf5b85e01da61628c65ee92292eb2974617

we need to use SCROW for row numbers, fdo#59894



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Florian Reisinger 2013-01-27 08:22:46 UTC
IS it possible to get this into final release of LibO 4.0??
Comment 3 Not Assigned 2013-02-01 17:11:14 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=008b8c4ca907950af543da91986ba89b0de1ae15&h=libreoffice-4-0

we need to use SCROW for row numbers, fdo#59894


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.