we need to use SCROW for row numbers, fdo#59894

This caused an overflow and resulted in adding endless number of values
until a bad_alloc was thrown.

Change-Id: I954acd801eb18e2c2fe6a449048856cb95d0d8b0